--- a/package.json
+++ b/package.json
@@ -21,11 +21,13 @@
     "@stellar/design-system": "^3.1.5",
     "@stellar/stellar-sdk": "^14.2.0",
     "@stellar/stellar-xdr-json": "^23.0.0",
+    "@tailwindcss/vite": "^4.1.16",
     "@tanstack/react-query": "^5.90.2",
     "lossless-json": "^4.2.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-router-dom": "^7.9.3",
+    "tailwindcss": "^4.1.16",
     "zod": "^4.1.11"
   },
   "devDependencies": {
