--- a/contracts/rent-a-car/Cargo.toml
+++ b/contracts/rent-a-car/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
-name = "guess-the-number"
-description = "Admin sets up the pot, anyone can guess to win it"
+name = "rent-a-car"
+description = "Admin sets up cars, anyone can rent a car"
 edition.workspace = true
 license.workspace = true
 repository.workspace = true
@@ -9,7 +9,7 @@ version.workspace = true
 
 [package.metadata.stellar]
 # Set contract metadata for authors, homepage, and version based on the Cargo.toml package values
-cargo_inherit = true 
+cargo_inherit = true
 
 [lib]
 crate-type = ["cdylib"]
